use 'explain' request

--- a/sidepanel/sidepanel.html
+++ b/sidepanel/sidepanel.html
@@ -3,7 +3,7 @@
     <title>Word explainer Side Panel</title>
   </head>
   <body>
-    <p id="select-info">Select a text to see examples.</p>
+    <p id="select-info">Select a text to see an explanation.</p>
     <div>
       <h2 id="selected"></h2>
       <p id="examples"></p>
